<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="408dp"
        android:layout_height="116dp"
        android:layout_marginEnd="3dp"
        android:text="@string/Text11"
        android:textAlignment="center"
        android:textColor="#0A2DED"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textview_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <EditText
        android:id="@+id/textview_first"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:layout_marginBottom="80dp"
        android:text="@string/TextView1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:layout_marginBottom="180dp"
        android:text="@string/TextView2"
        app:layout_constraintBottom_toBottomOf="@+id/boton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="208dp"
        android:layout_height="106dp"
        android:layout_marginBottom="160dp"
        android:text="@string/Ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>